--- a/style/index.scss
+++ b/style/index.scss
@@ -36,6 +36,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 0.7em;
     max-width: 80em;
     // justify-content: stretch;
     justify-content: end;
