--- a/style/index.scss
+++ b/style/index.scss
@@ -92,11 +92,11 @@ body {
 @keyframes glow {
   from {
     // text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-    text-shadow: 0 0 1em yellow;
+    text-shadow: 0 0 5px rgb(99, 16, 88), 0 0 15px rgba(99, 16, 88, 0.5);
   }
   to {
     // text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-    text-shadow: 0 0 0em transparent;
+    text-shadow: 0 0 15px rgba(99, 16, 88, 0.5);
   }
 }
 
